--- a/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_clix2017.scss
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_clix2017.scss
@@ -2130,7 +2130,7 @@ ul.jqtree-tree .jqtree-toggler {
     .note-page {
       // display: none;
       color: #000000;
-      margin-left: 25px;
+      margin-left: 15px;
       background-color: #fff;
       padding-bottom: 30px;
       .group_sections_content{
@@ -4806,6 +4806,7 @@ ul.nav_menu_1 {
     border-radius: 3px;
     color:#A2A2A2;
     background-color: #f7f7f7;
+    width:85px;
     i{
         margin-right: 5px;
     }
@@ -4817,6 +4818,7 @@ ul.nav_menu_1 {
     border-radius: 3px;
     color:#A2A2A2;
     background-color: #f7f7f7;
+    width:85px;
     i{
         margin-right: 5px;
     }
