default values display in assessment-analytics panel of user analytics(progress-report or my performance)

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/user_course_analytics.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/user_course_analytics.html
@@ -404,6 +404,11 @@
 
         success: function(data){
           $(".correct_attempted_quizitems").html(data['correct_attempted_quizitems'])
+          $(".unattempted_quizitems").html(data['unattempted_quizitems'])
+          $(".visited_quizitems").html(data['visited_quizitems'])
+          $(".notapplicable_quizitems").html(data['notapplicable_quizitems'])
+          $(".incorrect_attempted_quizitems").html(data['incorrect_attempted_quizitems'])
+          $(".attempted_quizitems").html(data['attempted_quizitems'])
         },
       });//end of ajax
 
