StarlogoNova tool model 1 and 2 added with Telugu version and model 3 added in all 3 languages en,hi,te

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/jhapp_list.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/jhapp_list.html
@@ -244,6 +244,9 @@
                 <div  class="inner">
                     <button type="button"  class="right orange-button " id="insert_find_the_rate" >{% trans "Insert Find the rate" %} </button>
                 </div>
+
+
+
                 <div  class="inner">
                     <button type="button"  class="right orange-button " id="insert_starlogo_model1_en" >{% trans "Insert StarLogo Nova Model1 (en)" %} </button>
                 </div>
@@ -256,6 +259,26 @@
                 <div  class="inner">
                     <button type="button"  class="right orange-button " id="insert_starlogo_model2_hi" >{% trans "Insert StarLogo Nova Model2 (hi)" %} </button>
                 </div>
+                <div  class="inner">
+                    <button type="button"  class="right orange-button " id="insert_starlogo_model1_te" >{% trans "Insert StarLogo Nova Model1 (te)" %} </button>
+                </div>
+                <div  class="inner">
+                    <button type="button"  class="right orange-button " id="insert_starlogo_model2_te" >{% trans "Insert StarLogo Nova Model2 (te)" %} </button>
+                </div>
+                <div  class="inner">
+                    <button type="button"  class="right orange-button " id="insert_starlogo_model3_en" >{% trans "Insert StarLogo Nova Model3 (en)" %} </button>
+                </div>
+                <div  class="inner">
+                    <button type="button"  class="right orange-button " id="insert_starlogo_model3_hi" >{% trans "Insert StarLogo Nova Model3 (hi)" %} </button>
+                </div>
+                <div  class="inner">
+                    <button type="button"  class="right orange-button " id="insert_starlogo_model3_te" >{% trans "Insert StarLogo Nova Model3 (te)" %} </button>
+                </div>
+
+
+
+
+
 
 
 
