--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/add_asset.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/add_asset.html
@@ -174,23 +174,23 @@
         </div>
         <div class="row">
             <div class="small-12 medium-10 large-10 columns">
-            <label>
-                    {% if asset_obj %}
-                        {% get_relation_value asset_obj.pk "teaches" as teaches_rel %}
-                        {% get_selected_topics asset_obj.pk  as selecte_topics %}
-                    {%  endif %}                    
+            <label>  
+                     {% if asset_obj %}
+                        {% get_relation_value asset_obj.pk "teaches"  as selected_topic %}
+                    {%  endif %}                                  
                     choose topic :
-                    {%  for each_l in teaches_rel.grel_node %}
-                        {% for each in topic_nodes %}
-                            {%  if each.pk == each_l.pk %}
-                                    YES
-                                  {{each_l.name}}
-                            {% else %}
-                                   
-                                   NO {{each.name}}
-                            {% endif %}
-                        {% endfor %}
-                    {% endfor %}
+                        <select name="topics" id = "topic_list" multiple style="height:100px">
+                                <option value="">--- Select Topic ---</option>
+                                {% for each in topic_nodes %}
+                                 {% if each.pk == selected_topic.grel_node.0.pk %}
+                                    <option selected value="{{ each.pk }}" data-topic="{{ each.pk }}">
+                                        {{each.name}}
+                                {% else %}
+                                    <option value="{{ each.pk }}" data-topic="{{ each.pk }}">
+                                        {{each.name}}
+                                {%  endif %}
+                                {% endfor %}
+                        </select>
             </label>
             </div>
         </div>
@@ -461,7 +461,6 @@
         sel_asset_lang =  $('#asset_lang').find(':selected').attr('data-sub-code');
         asset_name = $("#asset-name").val();
         topic_list = $("#topic_list").find(':selected').attr('data-topic');
-        alert(topic_list);
         asset_disp_name = $("#asset-disp-name").val();
         asset_description = $("#asset-descid").val();
         var asset_id = $(this).attr('data-asset_id');
@@ -478,7 +477,7 @@
                         "sel_asset_lang":sel_asset_lang,
                         "is_raw_material": is_raw_material,
                         'topic_list':topic_list,
-                        'coll_arr':coll_arr,
+                        //'coll_arr':coll_arr,
                         'title' :"{{title}}",
 
                         // "asset_objective":asset_objective
