--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/curriculum_list.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/curriculum_list.html
@@ -5,11 +5,11 @@
     <div class="curriculum_listing">
     	<div class="curriculum_content">
     		<div class="curriculum_content_left">
-    			<a href="#"><img src="/static/ndf/images/curr-curriculum.png" style="height: 100px;"></a>
+    			<a href="{% url 'curriculum_detail' group_id node.pk %}"><img src="/static/ndf/images/curr-curriculum.png" style="height: 100px;"></a>
     			<div class="curriculum_content_details">
-            		<a href="#" class="hyperlink-style">Title: {{node.name}} </a>
-        			<a href="#" class="hyperlink-info"> No. of Sections: </a>
-        			<a href="#" class="hyperlink-info"> Created on: </a>
+            		<a href="{% url 'curriculum_detail' group_id node.pk %}" class="hyperlink-style">Title: {{node.name}} </a>
+        			<a href="{% url 'curriculum_detail' group_id node.pk %}" class="hyperlink-info"> No. of Sections: </a>
+        			<a href="{% url 'curriculum_detail' group_id node.pk %}" class="hyperlink-info"> Created on: </a>
     			</div>
     		</div>
     	</div>
