--- a/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_clix2017.scss
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_clix2017.scss
@@ -4640,13 +4640,9 @@ ul.nav_menu_1 {
 
 .buddy_margin{
     margin-right: 80px;
-    color:white;
     font-family:OpenSans-Regular;
     margin-top:6px;
-
 }
-
-
 
 .lms_explore_head{
     width: 100%;
@@ -5181,7 +5177,7 @@ ul.nav_menu_1 {
 }
 .inner
 {
-    display: inline-block;
+    display: inline-block !important;
 }
 
 .transcript-toggler{
@@ -5244,8 +5240,6 @@ ul.nav_menu_1 {
     color: #0c2944;
 }
 
-
-
 .margin-right-50{
     margin-right:50px;
 }
@@ -5257,5 +5251,38 @@ ul.nav_menu_1 {
     &:hover{
         color: #720f5e;
         background-color: #ffffff;
+    }
+}
+
+.white-text{
+    color: white;   
+}
+
+.quiz-player{
+    .quiz_qtn{
+        margin-left:20px !important;
+        font-size: 20px;
+    }
+    .question_edit{
+        margin-left: 20px !important;
+    }
+
+    input[type=checkbox], input[type=radio]{
+        margin-right: 10px;
+        width: 15px;
+        height: 15px;
+    }
+
+    .chk_ans_lbl, .rad_ans_lbl{
+        font-size: 22px;
+        margin-left: 5px;
+    }
+
+    .fi-check{
+        color: green;
+    }
+
+    .fi-x{
+        color: red;
     }
 }
