buddy_margin considered for lesson structure options

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/unit_structure.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/unit_structure.html
@@ -343,7 +343,7 @@ This will not be used because now only existing activities will be added.
     <dd class="accordion-navigation active" data-lesson-ele="lesson-accordion-{{id}}">
         <a href="#lesson-{{id}}" class="entity-title" id="lesson-accordion" data_lesson_name="{{name}}"  data_lesson_language="{{language}}">
             {{name}}
-            <div class="right edit_entity">
+            <div class="right edit_entity buddy_margin">
                 <i class="fi-list right"></i>
                 <ul class="entity_actions">
                     <li class="lesson_move_up">Move up</li>
@@ -358,7 +358,7 @@ This will not be used because now only existing activities will be added.
                 {{#each activities}}
                     <li id="activity-{{id}}" data-name="{{name}}">
                         <a class="entity-title">{{name}}
-                            <div class="right edit_entity">
+                            <div class="right edit_entity buddy_margin">
                                 <i class="fi-list right"></i>
                                 <ul class="entity_actions">
                                     <li class="activity_move_up">Move up</li>
