Create new curriculum replaced with create new topic map

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/curriculum_listing.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/curriculum_listing.html
@@ -4,10 +4,10 @@
 {% block body_content %}
 
    <div class="curriculum_list_header">
-    	<span class="title-curriculum">Your courses</span>
+    	<span class="title-curriculum"></span>
     	<div class="add-curriculum">
     		<a href="{% url  'create_edit_curriculum' group_id %}">
-    	    	<i class="fa fa-pencil-square-o" aria-hidden="true"></i> Create new curriculum
+    	    	<i class="fa fa-pencil-square-o" aria-hidden="true"></i> Create new topic map
         	</a>
     	</div>
     </div>
