--- a/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_clix2017.scss
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_clix2017.scss
@@ -5508,3 +5508,184 @@ ul.nav_menu_1 {
     color: #164A7B;
 
 }
+.scard {
+    background:#FFF;
+    border:1px solid #AAA;
+    border-bottom:3px solid #BBB;
+    padding:0px;
+    margin:5px;
+    overflow:hidden;
+    width:11rem;
+    height:9rem;
+     &:hover{
+    box-shadow: 0 2px 5px 2px rgba(0, 0, 0, 0.16), 0 2px 10px 1px rgba(0, 0, 0, 0.12);
+    transition: box-shadow 0.5s ease;
+  }
+    /*float:left;*/
+
+.scard_header {
+    text-align:center;
+    position:fixed;
+    height:20rem;
+    border:1px solid #AAA;
+    border-bottom:3px solid #BBB;
+    padding:0px;
+    margin:5px;
+    left:0px;
+    right:0px;
+    background:#FFF;
+    padding:25px 0px 5px 0px;
+    border-bottom:5px solid #CCC;
+    font-size:20px;
+    font-weight:bold;
+  }
+}
+.scard-content {
+    height: 2.7em;
+    padding: 0.5rem;
+    margin:5px;
+    padding-top: 0.5cm;
+    border-radius: 0 0 2px 2px;
+    overflow: hidden;
+    width:11rem;
+    margin-top: -0.3em;
+    /*height: 8.25rem;*/
+      background-color:#3e3e3e;
+  .scard-title{
+      font-size: 0.8em;
+      margin-top: -1em;
+      float: left;
+      color:#ececec;
+      //width:50%;
+      display:inline-block;
+      text-align: center;
+    }
+
+
+  }
+
+.scard-action {
+    //color:#ececec;
+    height: height;
+    font-size:0.6em;
+    padding: 0.5rem;
+    margin:5px;
+    padding-top: 0.1cm;
+    margin-top:-0.25em;
+    border-radius: 0 0 2px 2px;
+    overflow: hidden;
+    width:11rem;
+    background-color:#CCCCCC;
+
+}
+
+.scard-desc{
+    font-size:0.7em;
+    color:#333333;
+    height: 40px;
+    padding: 0.5rem;
+    margin:5px;
+    padding-top: 0.1cm;
+    margin-top:-0.25em;
+    border-radius: 0 0 2px 2px;
+    overflow: hidden;
+    width:11rem;
+    background-color:#E6E6E6;
+    display-inline:block;
+}
+
+ p {
+    margin:0px;
+    padding:10px;
+  }
+
+.scard-image {
+    padding:0px;
+    margin:0px;
+    height:100%;
+    background-position:center;
+    background-repeat:no-repeat;
+    position:relative;
+    overflow:hidden;
+    background-color:#f2f2f2;
+    img  {
+    border-radius: 2px 2px 0 0;
+    display: block;
+    margin: 0 auto;
+    opacity: 0.9;
+    //width:100%;
+    height:100%;
+  }
+
+  i {
+  font-size: 7rem;
+  opacity: 0.75;
+  display: block;
+  margin: -15px auto;
+  text-align: center;
+  color: gray;
+  font-family: "foundation-icons";
+  font-style: normal;
+  font-variant: normal;
+  text-transform: none;
+  text-decoration: inherit;
+  }
+
+  i.common-icon:before{
+  content: "\f1fb";
+  }
+  i.file:before {
+  content: "\f18e";
+  }
+  i.page:before {
+  content: "\f18e";
+  }
+  i.collection:before {
+  content: "\f18a";
+  }
+  i.documents:before {
+  content: "\f18b";
+  }
+  i.pdf:before {
+  content: "\f18b";
+  }
+  i.text:before {
+  content: "\f18e";
+  }
+  i.interactives:before {
+  content: "\f1b2";
+  }
+  i.ebooks:before {
+  content: "\f11e";
+  }
+  i.images:before {
+  content: "\f125";
+  }
+  i.audios:before, i.audio:before {
+  content: "\f17b";
+  }
+  i.videos:before, i.video:before {
+  content: "\f20e";
+  }
+
+
+}
+ .published.scard-action {
+      background: #A6D9CB;
+    }
+
+ .draft.scard-action {
+      content: "Draft";
+      background: #DCDCDC;
+
+    }
+
+
+
+.scard_footer {
+  border-top: 1px solid rgba(160, 160, 160, 0.2);
+  padding: 0.25rem 0.5rem;
+  color: gray;
+  font-size: small;
+  height: 2rem;
+  }
