--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/curriculum_list.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/curriculum_list.html
@@ -12,7 +12,21 @@
         			<a href="{% url 'curriculum_detail' group_id node.pk %}" class="hyperlink-info"> Created on: {{node.created_at}}</a>
     			</div>
     		</div>
+            <div class="curriculum_content_right" style="margin-top: 52px;">
+            <a data-reveal-id="delete-unit"><i class="fa fa-trash"></i>{% trans "Delete" %}</a>
+            <a href="#"><i class="fa fa-pencil"></i>{% trans "Edit" %}</a>
+            </div>
     	</div>
+    </div>
+
+    <div id="delete-unit" class="reveal-modal tiny text-center" data-reveal>
+        <h3>{% trans "Delete Structure:" %} {% firstof node.id %} ?</h3>
+            <br/>
+            {% trans "Are you sure want to delete?" %}
+            <br/>
+            <a href="#" class="button tiny success">{% trans "Cancel" %}</a>
+            <a href="#" class="button tiny alert">{% trans "Yes" %}</a>
+            <a class="close-reveal-modal" aria-label="Close">&#215;</a>
     </div>
 
 
