ajax block bug fixed

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/curriculum_create_edit.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/curriculum_create_edit.html
@@ -323,7 +323,7 @@ background-repeat:no-repeat; background-size: 48px 48px
 	      		alert("Please enter sub theme name");
 	      	}
 
-	        location.reload(true);
+	        location.reload();
 	        $("#sub_theme_id").val("");
 	      }
 	    });
@@ -355,7 +355,7 @@ background-repeat:no-repeat; background-size: 48px 48px
 	      		alert("Please enter topic name");
 	      	}
 
-	        location.reload(true);
+	        location.reload();
 	        $("#add_topic_id").val("");
 	      }
 	    });
