--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/lms.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/lms.html
@@ -42,14 +42,10 @@
               <li>
                   <a href="{% url 'curriculum_list' groupid  %}"><img src="/static/ndf/images/lesson_planning.png" style="height:20px;"/> {% trans "Add Curriculum" %}</a>
               </li>
-              {% if_edit_course_structure as edit_course_struct %}
-              {% if edit_course_struct %}
+              {% if if_edit_course_structure %}
               <li>
                   
                   <a href="{% url 'unit_detail' groupid  %}" target="_blank" class="fi-pencil"> {% if 'Group' in group_object.member_of_names_list %}{% trans "Edit WorkSpace Structure" %} {% else  %} {% trans "Edit Course Structure" %}  {% endif %} </a>
-              </li>
-              <li>
-                  <a href="{% url 'unit_detail' groupid  %}" target="_blank"><img src="/static/ndf/images/lesson_planning.png"/> {% trans "Edit Course Structure" %}</a>
               </li>
               {% endif %}
               <li>
